test/Fail/Issue623/B.agda
module Issue623.B where

S : Set
S = S
